--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "angular-sanitize": "~1.4.2",
     "foundation": "~5.5.2",
     "angular-toastr": "~1.5.0",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "angular-animate": "~1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
